versioned_docs/version-2.17/reference/subsystems/lambdex.mdx
---
title: lambdex
description: |
  A tool for turning .pex files into Function-as-a-Service artifacts (https://github.com/pantsbuild/lambdex).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A tool for turning .pex files into Function-as-a-Service artifacts (https://github.com/pantsbuild/lambdex).

Backend: <span className="color--primary">`pants.backend.awslambda.python`</span>

Config section: <span className="color--primary">`[lambdex]`</span>

<span className={styles.options}>

## Basic options

### `layout`

<Option
  cli_repr={`--lambdex-layout=<LambdexLayout>`}
  env_repr='PANTS_LAMBDEX_LAYOUT'
  toml_repr={`[lambdex]
layout = <LambdexLayout>`}
  one_of='lambdex, zip'
  default_repr={`lambdex`}
>

Explicitly control the layout used for `python_awslambda` and `python_google_cloud_function` targets. This option exists for the transition from Lambdex-based layout to the plain zip layout, as recommended by cloud vendors.

</Option>

## Advanced options

### `install_from_resolve`

<Option
  cli_repr={`--lambdex-install-from-resolve=<str>`}
  env_repr='PANTS_LAMBDEX_INSTALL_FROM_RESOLVE'
  toml_repr={`[lambdex]
install_from_resolve = <str>`}
  default_repr={`None`}
>

If specified, install the tool using the lockfile for this named resolve.

This resolve must be defined in [python].resolves, as described in https://www.pantsbuild.org/v2.17/docs/python-third-party-dependencies#user-lockfiles.

The resolve&#x27;s entire lockfile will be installed, unless specific requirements are listed via the `requirements` option, in which case only those requirements will be installed. This is useful if you don&#x27;t want to invalidate the tool&#x27;s outputs when the resolve incurs changes to unrelated requirements.

If unspecified, and the `lockfile` option is unset, the tool will be installed using the default lockfile shipped with Pants.

If unspecified, and the `lockfile` option is set, the tool will use the custom `lambdex` &#x22;tool lockfile&#x22; generated from the `version` and `extra_requirements` options. But note that this mechanism is deprecated.

</Option>

### `requirements`

<Option
  cli_repr={`--lambdex-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_LAMBDEX_REQUIREMENTS'
  toml_repr={`[lambdex]
requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

If install_from_resolve is specified, install these requirements, at the versions provided by the specified resolve&#x27;s lockfile.

Values can be pip-style requirements (e.g., `tool` or `tool==1.2.3` or `tool>=1.2.3`), or addresses of python_requirement targets (or targets that generate or depend on python_requirement targets).

The lockfile will be validated against the requirements - if a lockfile doesn&#x27;t provide the requirement (at a suitable version, if the requirement specifies version constraints) Pants will error.

If unspecified, install the entire lockfile.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--lambdex-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_LAMBDEX_INTERPRETER_CONSTRAINTS'
  toml_repr={`[lambdex]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<3.12"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `console_script`

<Option
  cli_repr={`--lambdex-console-script=<str>`}
  env_repr='PANTS_LAMBDEX_CONSOLE_SCRIPT'
  toml_repr={`[lambdex]
console_script = <str>`}
  default_repr={`lambdex`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--lambdex-entry-point=<str>`}
  env_repr='PANTS_LAMBDEX_ENTRY_POINT'
  toml_repr={`[lambdex]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

## Deprecated options

### `version`

<Option
  cli_repr={`--lambdex-version=<str>`}
  env_repr='PANTS_LAMBDEX_VERSION'
  toml_repr={`[lambdex]
version = <str>`}
  default_repr={`lambdex>=0.1.9`}
  removal_version='2.18.0.dev1'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.17/docs/python-lockfiles.'}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--lambdex-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_LAMBDEX_EXTRA_REQUIREMENTS'
  toml_repr={`[lambdex]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
  removal_version='2.18.0.dev1'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.17/docs/python-lockfiles.'}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `lockfile`

<Option
  cli_repr={`--lambdex-lockfile=<str>`}
  env_repr='PANTS_LAMBDEX_LOCKFILE'
  toml_repr={`[lambdex]
lockfile = <str>`}
  default_repr={`<default>`}
  removal_version='2.18.0.dev0'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.17/docs/python-lockfiles.<br /><br />1. If you have an existing resolve that includes the requirements for this tool,<br />    you can set `[lambdex].install_from_resolve = "<resolve name>".<br />    This may be the case if the tool also provides a runtime library, and you want<br />    to specify the version in just one place.<br />2. If not, you can set up a new resolve as described at the link above.<br /><br />Either way, the resolve you choose should provide the requirements currently set by the `version` and `extra-requirements` options for this tool, which you can see by running `pants help-advanced lambdex`.'}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.17.1rc3/src/python/pants/backend/python/subsystems/lambdex.lock for the default lockfile contents.

To use a custom lockfile, set this option to a file path relative to the build root, then run `pants generate-lockfiles --resolve=lambdex`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

## Related subsystems

None

</span>
